@@ -4,6 +4,8 @@
 
 2005-07-31  Bastian Maerkisch  <bmaerkisch@web.de>
 
+	* src/plot.c: #include gpexecute.h for OS/2 without USE_MOUSE.
+
 	* src/show.c (show_version): Correct spelling error HIDDEN3D_GRDBOX =>
 	HIDDEN3D_GRIDBOX.
 
